Closed Bug 253054 Opened 22 years ago Closed 21 years ago

Spellchecking in Thunderbird does not function on new install

Categories

(Thunderbird :: General, defect)

x86
Windows 98
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird0.8

People

(Reporter: macrxnapa, Assigned: mscott)

References

Details

(Keywords: fixed-aviary1.0)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a3) Gecko/20040717 Build Identifier: Thunderbird 0.7.1 Thunderbird spellchecking fails to fuction upon new install. The Languages menu, in the spellchecking dialog, is set to 'Download more' on a new insatll of Thunderbird causing the spellchecking to fail. Reproducible: Always Steps to Reproduce: 1. Install Thunderbird 0.7.1 with new profile. 2. Obviously, set up at least one account. 3. Create a new email with known spelling errors and try to check the spelling. Actual Results: No checking is done. Expected Results: The normal spellchecking of the email is seen. Workaround: Selecting a dictionary from the Languages menu solves the problem, but a new user is confused by the behavior. (frankly, so was this technician when he heard this) ;-)
confirming and marking as a blocker...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking-aviary1.0PR+
Flags: blocking-aviary1.0+
*** Bug 255104 has been marked as a duplicate of this bug. ***
I'm still trying to reproduce this.
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.8
Do we get lucky and have any JS errors in the console?
Target Milestone: Thunderbird0.8 → ---
Warning: useless expression Source File: file:///C:/Program%20Files/Mozilla%20Thunderbird/components/nsExtensionManager.js Line: 285 Warning: useless expression Source File: file:///C:/Program%20Files/Mozilla%20Thunderbird/components/nsExtensionManager.js Line: 288 bunch of redeclaration warnings... Warning: function nsExtensionManager_installExtensionInternal does not always return a value Source File: file:///C:/Program%20Files/Mozilla%20Thunderbird/components/nsExtensionManager.js Line: 2249, Column: 22 Source Code: return extensionID; Warning: function nsExtensionsDataSource_getItemProperty does not always return a value Source File: file:///C:/Program%20Files/Mozilla%20Thunderbird/components/nsExtensionManager.js Line: 3745, Column: 2 Source Code: }, Warning: useless expression Source File: file:///C:/Program%20Files/Mozilla%20Thunderbird/components/nsUpdateService.js Line: 83 Warning: useless expression Source File: file:///C:/Program%20Files/Mozilla%20Thunderbird/components/nsUpdateService.js Line: 86 Warning: function nsAppUpdater__parseUpdateCollection does not always return a value Source File: file:///C:/Program%20Files/Mozilla%20Thunderbird/components/nsUpdateService.js Line: 831, Column: 22 Source Code: catch (e) { return; } Warning: function nsAppUpdater__parseUpdateCollection does not always return a value Source File: file:///C:/Program%20Files/Mozilla%20Thunderbird/components/nsUpdateService.js Line: 855, Column: 17 Source Code: return result; and finally the coup de grace Error: uncaught exception: [Exception... "Component returned failure code: 0x80004003 (NS_ERROR_INVALID_POINTER) [nsIEditorSpellCheck.GetNextMisspelledWord]" nsresult: "0x80004003 (NS_ERROR_INVALID_POINTER)" location: "JS frame :: chrome://editor/content/EdSpellCheck.js :: NextWord :: line 260" data: no]
Attached patch the fixSplinter Review
Comment on attachment 155850 [details] [diff] [review] the fix Editor should use a chrome package known to exist (like itself) instead of using "navigator" as the chrome package to ask the locale of. In the case of thunderbird static installer builds, we strip out the navigator package so it doesn't even exist. That leads to this code failing.
Attachment #155850 - Flags: review?(brade)
Target Milestone: --- → Thunderbird0.8
Comment on attachment 155850 [details] [diff] [review] the fix moa/r=brade I haven't tested this patch but I'm ok with it based on what mscott described. I do think that we'll want to make further changes to it though. I'd like to see the spellchecker have its own chrome/locale/etc. so that it could easily be added as an extension to firefox (without bringing in all of the editor dialogs, etc.). That probably requires a separate bug.
Attachment #155850 - Flags: review?(brade) → review+
FYI, this is fixed on the aviary branch. Leaving open for the trunk which is currently closed for a seamonkey release. Moving to .9 so this doesn't show up on my .8 blocking list anymore.
Target Milestone: Thunderbird0.8 → Thunderbird0.9
fixed-aviary1.0 keyword
Keywords: fixed-aviary1.0
fixed on the trunk now too
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: Thunderbird0.9 → Thunderbird0.8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: