Bug #253054 --> Editor should use a chrome package known to exist (like itself) instead of using "navigator" as the chrome package for asking the locale.

Fixes problems with the spell checker not working for new thunderbird profiles where there is no navigator package.

r=brade